deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-microservice-architecture-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "arch.homework"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: otus-microservice-architecture-app
              port:
                number: 8000
